# nao-puppet-master

./: README
nao-puppetmaster-behavior/: README  nao-puppetmaster.crg
nao-puppetmaster-gamecontroller-client/: README  nao-puppetmaster-gamecontroller-client.sln
nao-puppetmaster-server/: CMakeLists.txt  README  main.cpp  qiproject.xml
nao-puppetmaster-server/build-win32-vs2010/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  dependencies.cmake  nao-puppetmaster-server.sln  nao-puppetmaster-server.vcxproj  nao-puppetmaster-server.vcxproj.filters  test_nao-puppetmaster-server.vcxproj  test_nao-puppetmaster-server.vcxproj.filters
nao-puppetmaster-server/build-win32-vs2010/Win32/Debug/ALL_BUILD/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
nao-puppetmaster-server/build-win32-vs2010/Win32/Debug/INSTALL/: ResolveAssemblyReference.cache
nao-puppetmaster-server/build-win32-vs2010/test_nao-puppetmaster-server.dir/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  test_nao-puppetmaster-server.lastbuildstate  test_nao-puppetmaster-server_d_manifest.rc
(+20 files in other folders)
